[package]
name = "study_timer"
version = "0.1.0"
authors = ["Berke Enercan <berkeenercan@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = "3.0.0-beta.2"
