[package]
name = "pteto"
version = "0.1.0"
authors = ["Berke Enercan <berkeenercan@tutanota.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0.137", features = ["derive"] }
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["cargo"] }
